fix stray scrollbar on small screen sizes

--- a/src/index.css
+++ b/src/index.css
@@ -220,6 +220,7 @@ body,
   .design-commentary-wrapper.closed {
     width: 100%;
     height: 0;
+    display: none;
   }
 }
 
